# enDjinn

./: README.md
enDjinn/: CMakeLists.txt
enDjinn/demo/: helloworld.cpp
enDjinn/engine/: Engine.cpp  Engine.h
enDjinn/engine/assets/: ResourceManager.cpp  ResourceManager.h  Sprite.h
enDjinn/engine/assets/scripts/: ecs.lua  main_script.lua
enDjinn/engine/managers/: GraphicsManager.cpp  GraphicsManager.h  InputManager.cpp  InputManager.h  ScriptManager.cpp  ScriptManager.h  SoundManager.cpp  SoundManager.h
enDjinn/engine/utils/: SokolImplementations.cpp  Types.h
